--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.12.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
