--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "bootstrap-icons": "^1.10.3",
     "framer-motion": "^10.12.4",
     "notistack": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-filter-search": "^1.1.11",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-use-cart": "^1.13.0",
     "sweetalert2": "^11.7.3",
     "valid-url": "^1.0.9"
   },
